mule-user-guide/v/3.5/deploying-mule-as-a-service-to-tomcat.adoc
= 将Mule作为服务部署到Tomcat

本页面描述了两个允许您在Tomcat Web服务器上部署Mule应用程序的活动：

* 将Mule作为服务安装在Apache Tomcat服务器上
* 设置您的Mule应用程序进行热部署

有关热部署Mule应用程序的更多信息，请参阅 link:/mule-user-guide/v/3.5/application-server-based-hot-deployment[基于应用服务器的热部署]。

== 在Tomcat上安装Mule

.  link:http://tomcat.apache.org[下载]并按照Apache的安装说明安装Apache Tomcat。
. 在系统的Tomcat主目录中，将以下行添加到`conf/server.xml`文件：+
+
[source]
----
<Listener className="org.mule.module.tomcat.MuleTomcatListener" />
----
+
. 如果您尚未这样做，请在本地系统上创建一个Tomcat主目录。
. 将Mule `lib`文件夹及其所有子目录 -  *except* `/boot`的内容复制到您的Tomcat主目录中。`mule-libs/`。你不需要压扁目录。
. 将`mule-module-tomcat-<version>.jar`文件复制到Tomcat主目录中的`mule-libs/mule/`目录。
. 将以下库从您的Mule `lib/boot/`目录复制到您的Tomcat `mule-libs/opt/`目录：+
*  `commons-cli-1.2.jar`
*  `jul-to-slf4j-1.6.1.jar`
*  `log4j-1.2.16.jar`
*  `mule-module-logging-3.3.1.jar`
*  `wrapper-3.5.7.jar`

. 在Tomcat `conf/catalina.properties`文件中，将以下内容添加到`common.loader`（以逗号将其与现有值分开）：

[source]
----
${catalina.base}/lib,${catalina.base}/lib/*.jar,${catalina.home}/lib,${catalina.home}/lib/*.jar,${catalina.home}/mule-libs/user/*.jar,${catalina.home}/mule-libs/mule/*.jar,${catalina.home}/mule-libs/opt/*.jar,${catalina.home}/mule-libs/endorsed/*.jar
----

[NOTE]
====
确保您的web.xml文件中只有一个侦听器：

[source,xml,linenums]
----
<listener> 
<listener-class> 
org.mule.module.tomcat.MuleTomcatListener 
</listener-class> 
</listener> 
----
====

== 在Tomcat中部署Mule应用程序

. 将您的Mule应用程序的配置文件和自定义Java类打包到`.war`文件中（请参阅 link:/mule-user-guide/v/3.5/application-server-based-hot-deployment[基于应用服务器的热部署]）。
. 复制您的应用程序的`.war`文件，然后将其粘贴到Tomcat `/webapps`目录中。
.  Tomcat热部署应用程序。

如果需要更改Mule应用程序中的配置或Java文件，请修改Tomcat `/webapps`目录下展开的目录中的文件，然后触摸`web.xml`文件（例如，只需添加并删除文件中的空间然后保存它）。这些操作会触发Tomcat重新部署应用程序。

或者，您可以修改应用程序的源文件，将其重新打包为`.war`文件，然后将新`.war`文件放入`/webapps`目录以触发Tomcat重新部署应用程序。

== 另请参阅

* 了解如何在 link:/runtime-manager/cloudhub[CloudHub]中部署云中的Mule应用程序。




